# hueify

./: .env.example  .gitignore  README.md  bridge.py  cli.py  main.py  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
controllers/: group_controller.py  group_scene_controller.py  light_controller.py  scene_controller.py  zone_controller.py
docs/: getting-started.md  index.md
docs/api/: events.md  exceptions.md  hueify.md  lights.md  rooms-zones.md
docs/guide/: events.md  lights.md  rooms-zones.md
examples/: basic_usage.py  bridge_discovery_example.py  cache_updates.py  event_monitoring.py  get_scene_names_example.py  group_lookup.py  group_manager_example.py  light_lookup.py  light_tracking.py  live_state.py  mcp_server.py  room_lookup.py  room_tracking.py  scene_lookup.py  server_sent_events.py  smoke_test.py  subtle_light_demo.py  system_prompt.py  toggle_lights.py  zone_lookup.py
hueify/: __init__.py  _logging.py  bridge.py  cli.py  client.py  credentials.py  exceptions.py  hueify.py  main.py  service.py  test.py
hueify/bridge/: __init__.py  exceptions.py  models.py  service.py  utils.py
hueify/cache/: __init__.py  lookup.py  managed.py  port.py  service.py
hueify/cli/: app.py  server.py  setup.py
hueify/controllers/: group_animation_controller.py  group_controller.py  group_scene_controller.py
hueify/credentials/: __init__.py  service.py  utils.py
hueify/events/: __init__.py  bus.py  models.py  monitor.py  stream.py
hueify/examples/: test.py
hueify/exceptions/: __init__.py  models.py
hueify/grouped_lights/: __init__.py  cache.py  client.py  exception.py  exceptions.py  lookup.py  models.py  namespace.py  service.py  views.py
hueify/groups/: __init__.py  base.py  discovery.py  models.py  service.py
hueify/http/: __init__.py  client.py  models.py
hueify/light/: __init__.py  cache.py  exceptions.py  lookup.py  models.py  namespace.py  service.py  views.py
hueify/lights/: __init__.py  controller.py  exceptions.py  lookup.py  models.py  service.py
hueify/mcp/: __init__.py  app.py  prompts.py  server.py
hueify/models/: group_info.py
hueify/namespaces/: __init__.py  light.py  rooms.py  zones.py
hueify/onboarding/: __init__.py  discovery.py  registration.py
hueify/prompts/: __init__.py  service.py  system_prompt.md
hueify/room/: __init__.py  cache.py  namespace.py
hueify/rooms/: exceptions.py  lookup.py  service.py
hueify/scenes/: __init__.py  cache.py  controller.py  exceptions.py  lookup.py  models.py  namespace.py  schemas.py  service.py
hueify/setup/: models.py  service.py  utils.py
hueify/shared/: decorators.py  fuzzy.py  types.py  (+1 more)
tests/: test_credentials.py  test_group_controller.py
types/: types.py
(+93 files in other folders)
